<resources>
    <string name="app_name">Egyptian tour guide</string>
    <string name="egyptian_hotels_resturants_artifacts_all_you_want_to_know_about_egypt_is_here">Egyptian hotels ,restaurants ,artifacts all you want to know about Egypt is here</string>
    <string name="egyptian_tour_guide">Egyptian tour guide</string>
    <string name="log_in">Log in</string>
    <string name="craete_new_account">Craete new account</string>
    <string name="password">Password</string>
    <string name="sign_up">Sign up</string>
    <string name="mobile">Mobile</string>
    <string name="artifacts">Artifacts</string>
    <string name="profile">Profile</string>
    <string name="artifact">Artifact</string>
    <string name="city">City :</string>
    <string name="description">Description :</string>
    <string name="the_ancient_egyptians_built_pyramids_as_tombs_for_the_pharaohs_and_their_queens_the_pharaohs_were_buried_in_pyramids_of_many_different_shapes_and_sizes_from_before_the_beginning_of_the_old_kingdom_to_the_end_of_the_middle_kingdom_pyramids_of_giza_there_are_about_eighty_pyramids_known_today_from_ancient_egypt_the_three_largest_and_best_preserved_of_these_were_built_at_giza_at_the_beginning_of_the_old_kingdom_the_most_well_known_of_these_pyramids_was_built_for_the_pharaoh_khufu_it_is_known_as_the_great_pyramid">The ancient Egyptians built pyramids as tombs for the pharaohs and their queens. The pharaohs were buried in pyramids of many different shapes and sizes from before the beginning of the Old Kingdom to the end of the Middle Kingdom. Pyramids of Giza There are about eighty pyramids known today from ancient Egypt. The three largest and best-preserved of these were built at Giza at the beginning of the Old Kingdom. The most well-known of these pyramids was built for the pharaoh Khufu. It is known as the \'Great Pyramid\'.</string>
    <string name="save">Save</string>
    <string name="popular_artifacts">Popular Artifacts</string>
    <string name="popular_hotels">Popular Hotels</string>
    <string name="popular_resturants">Popular Restaurants</string>
    <string name="likes_artifacts">Likes Artifacts</string>
    <string name="likes_hotels">Likes Hotels</string>
    <string name="likes_resturants">Likes Restaurants</string>
    <string name="name">Name</string>
    <string name="resturants">Restaurants</string>
    <string name="adress">Address</string>
    <string name="home">Home</string>
    <string name="hotels">Hotels</string>
    <string name="search">Search</string>
    <string name="logout">"Log out"</string>
    <string name="are_you_sure">Are you sure?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="invalid_name">Invalid Name</string>
    <string name="inavlid_password">Invalid password</string>
    <string name="invalid_mobile">Invalid Mobile number</string>
    <string name="updated_profile">Profile updated </string>
    <string name="updated_password">password updated </string>
    <string name="Acount_Created">Acount Created </string>
    <string name="error_art">Error while loading artifacts</string>
    <string name="err_pass">Error to updating password</string>
    <string name="err_user">Error to updating user</string>
    <string name="err_arts">Error while loading artifacts</string>
    <string name="err_hotels">Error while loading hotels</string>
    <string name="err_rest">Error while loading restaurants</string>
    <string name="mobile_is_not_found">Mobile number is not found</string>
    <string name="password_is_wrong">Password is wrong</string>
    <string name="sending_code">Sending code</string>
    <string name="vervicatin_error">Vervication error </string>
    <string name="catch_vervication_error">catch Vervication error : </string>
    <string name="forget_password">Forget Password?</string>
    <string name="no_barcode_detected">No Barcode Detected</string>
    <string name="Guide_Me">Guide Me</string>
    <string name="remember_me">Rememper Me</string>
    <string name="barcode_error_message">this is not artifact barcode</string>
</resources>
