<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_gravity="center"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_gravity="center"
        android:background="@android:color/white"
        >
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_gravity="top"

            >
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_gravity="top"
                android:orientation="vertical">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >

                    <RelativeLayout

                        android:layout_width="match_parent"
                        android:layout_height="240dp"
                        android:background="@drawable/splash_background"
                        android:gravity="right"
                        >
                        <ImageView
                            android:id="@+id/welcomephoto"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:src="@drawable/circle"
                            android:scaleType="fitXY"
                            />

                        <ImageView
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:src="@drawable/circle"
                            android:scaleType="fitXY"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentRight="true"
                            />
                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:layout_gravity="bottom"
                        android:gravity="bottom"
                        >

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="50dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginBottom="10dp"
                            android:textSize="30sp"
                            android:textStyle="bold"
                            android:text="@string/egyptian_tour_guide"
                            android:gravity="center"
                            android:textColor="@color/colorPrimaryDark"
                            />

                        <TextView

                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="50dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginBottom="20dp"
                            android:textSize="15sp"
                            android:textStyle="normal"
                            android:text="@string/egyptian_hotels_resturants_artifacts_all_you_want_to_know_about_egypt_is_here"
                            android:gravity="center"
                            android:textColor="@color/color2"
                            />

                        <Button
                            android:id="@+id/log_in"
                            android:layout_marginTop="50dp"
                            android:layout_width="200dp"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:background="@drawable/button_raduis"
                            android:text="@string/log_in"
                            android:textColor="@color/colorAccent"
                            />

                        <TextView
                            android:id="@+id/create_new_account"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:layout_marginRight="30dp"
                            android:layout_marginLeft="30dp"
                            android:layout_marginBottom="20dp"
                            android:textSize="15sp"
                            android:textStyle="bold"
                            android:text="@string/craete_new_account"
                            android:gravity="center"
                            android:textColor="@color/colorPrimaryDark"
                            />

                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</LinearLayout>



