<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:layout_gravity="center"
    >
    <ImageView
        android:id="@+id/backphoto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="fitXY"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/opacity_"
        android:gravity="center"
        android:layout_gravity="center"
        >
        <ScrollView

            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_gravity="center"
            >



            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:layout_marginTop="60dp"
                android:layout_marginBottom="50dp"
                >
                <LinearLayout
                    android:layout_width="200dp"
                    android:layout_height="100dp"
                    android:layout_gravity="center_horizontal"
                    >
                    <ImageView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/logo"
                        />
                </LinearLayout>

                <LinearLayout
                    android:id="@+id/name_sign_up_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input"
                    android:layout_margin="10dp"
                    >

                    <EditText
                        android:id="@+id/name_sign_up"
                        android:inputType="text"
                        android:drawableLeft="@drawable/usericon"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"
                        android:background="@null"
                        android:gravity="center_horizontal"
                        android:hint="@string/name"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/color1"
                        />
                </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/input"
                android:layout_margin="10dp"
                android:orientation="horizontal"
                >
                <Spinner
                    android:id="@+id/spinnerCountries"
                    android:layout_width="0dp"
                    android:layout_weight="1"
                    android:layout_height="match_parent"
                    />
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_weight="3"
                    android:layout_height="wrap_content"
                    >

                    <EditText
                        android:id="@+id/mobile_sign_up"
                        android:inputType="number"
                        android:drawableLeft="@drawable/mobile_icon"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"
                        android:background="@null"
                        android:gravity="center_horizontal"
                        android:hint="@string/mobile"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/color1"
                        />
                </LinearLayout>
            </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/input"
                    android:layout_margin="10dp"
                    >

                    <EditText
                        android:id="@+id/password_sign_up"
                        android:drawableLeft="@drawable/lock"
                        android:layout_width="match_parent"
                        android:layout_height="30dp"
                        android:layout_margin="10dp"
                        android:background="@null"
                        android:gravity="center_horizontal"
                        android:hint="@string/password"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:textColor="@color/colorAccent"
                        android:textColorHint="@color/color1"
                        android:inputType="textPassword"
                        />
                </LinearLayout>


                <Button
                    android:id="@+id/button_sign_up"
                    android:layout_marginTop="10dp"
                    android:layout_width="300dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="@drawable/button_raduis"
                    android:text="@string/sign_up"
                    android:textColor="@color/colorAccent"
                    android:layout_marginBottom="20dp"
                    />

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/Progress_sign_up"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:visibility="gone"
        />
</RelativeLayout>