<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            >
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="300dp">

                <ImageView
                    android:id="@+id/image_id"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/splash"
                    />
                <LinearLayout
                    android:id="@+id/like_photo_id"
                    android:layout_width="70dp"
                    android:layout_height="50dp"
                    android:layout_alignParentRight="true"
                    android:padding="10dp"
                    >

                    <LinearLayout

                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="1dp"
                        android:padding="5dp"
                        android:background="@drawable/like_raduis"
                        >

                        <ImageView
                            android:id="@+id/like_id"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/like4"
                            />
                    </LinearLayout>

                </LinearLayout>



            </RelativeLayout>

            <LinearLayout
                android:padding="16dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="250dp"
                android:orientation="vertical"
                android:background="@drawable/details_view_raduis"
                >
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:id="@+id/name_id"
                        android:layout_width="0dp"
                        android:layout_weight="3"
                        android:layout_height="30dp"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:text="@string/artifact"
                        android:gravity="center_vertical"
                        android:textColor="@color/colorPrimaryDark"
                        />

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        >
                        <LinearLayout
                            android:layout_width="30dp"
                            android:layout_height="30dp"
                            android:padding="5dp"
                            android:gravity="right"

                            >

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:src="@drawable/like3"
                                android:gravity="center"

                                />

                        </LinearLayout>
                        <TextView
                            android:id="@+id/likes_id"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:textSize="15sp"
                            android:textStyle="normal"
                            android:text= "1.3K"
                            android:gravity="center"
                            android:layout_gravity="right"
                            android:textColor="@color/color2"
                            />

                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text= "@string/adress"
                        android:gravity="left"
                        android:layout_gravity="right"
                        android:textColor="@color/color2"
                        />
                    <TextView
                        android:id="@+id/city_id"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="match_parent"
                        android:textSize="20dp"
                        android:textStyle="normal"
                        android:text= "Luxor"
                        android:gravity="left"
                        android:textColor="@color/color2"
                        />
                </LinearLayout>
                <LinearLayout
                    android:id="@+id/url_view_id"
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:gravity="center"
                    android:visibility="gone"
                    android:layout_gravity="center"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/url_tv_id"
                        android:layout_width="0dp"
                        android:layout_weight="1"
                        android:layout_height="match_parent"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        android:text= "Url"
                        android:gravity="left"
                        android:layout_gravity="right"
                        android:textColor="@color/color2"

                        />
                    <TextView
                        android:id="@+id/url_id"
                        android:layout_width="0dp"
                        android:layout_weight="2"
                        android:layout_height="match_parent"
                        android:textSize="20dp"
                        android:textStyle="normal"
                        android:gravity="left"
                        android:textColor="@color/colorPrimaryDark"
                        />
                </LinearLayout>



                <TextView
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:textStyle="bold"
                    android:text= "@string/description"
                    android:gravity="left"
                    android:layout_gravity="right"
                    android:textColor="@color/color2"
                    />
                <TextView
                    android:id="@+id/description_id"
                    android:layout_marginTop="5dp"
                    android:layout_marginLeft="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15dp"
                    android:textStyle="normal"
                    android:text= "@string/the_ancient_egyptians_built_pyramids_as_tombs_for_the_pharaohs_and_their_queens_the_pharaohs_were_buried_in_pyramids_of_many_different_shapes_and_sizes_from_before_the_beginning_of_the_old_kingdom_to_the_end_of_the_middle_kingdom_pyramids_of_giza_there_are_about_eighty_pyramids_known_today_from_ancient_egypt_the_three_largest_and_best_preserved_of_these_were_built_at_giza_at_the_beginning_of_the_old_kingdom_the_most_well_known_of_these_pyramids_was_built_for_the_pharaoh_khufu_it_is_known_as_the_great_pyramid"
                    android:gravity="left"
                    android:layout_gravity="right"
                    android:textColor="@color/color2"
                    />

            </LinearLayout>

        </RelativeLayout>

    </ScrollView>

</RelativeLayout>